--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,7 +12,7 @@
     text-decoration: none;
     font-size: 17px;
     position: relative;
-    width: 19%;
+    width: 20%;
 }
   
 .topnav a:hover {
@@ -62,4 +62,23 @@
 
 .description p {
     color: blue;
+}
+
+/*Login and Create Account Buttons */
+#loginmes {
+    color: red;
+}
+
+#createmes {
+    color: red;
+}
+
+/*Logged in Text and Button*/
+#centered {
+    text-align: center;
+}
+
+.logout {
+    position: relative;
+    left: 47%;
 }
